# rspn

./: .gitignore  makefile  pyproject.toml  readme.md  water.md
docs/theory/: cc-lr.bbl  cc-lr.tex
examples/: water_sto3g.out  water_sto3g.py
memuse/: makefile  profile-water.py
src/rspn/ghf_ccsd/: _jacobian.py  _jacobian_action.py  _lheecc.py  _nuOpCC.py  ghf_ccsd_lr.py
src/rspn/uhf_ccs/: _jacobian.py  _lheecc.py  _nuOpCC.py  uhf_ccs_lr.py
tests/: conftest.py
tests/ghf_ccsd/: plain_cc_jacobian_dd.py  prepare_water_sto3g@HF.py  psi4_data.py  test_ghf_ccsd_dyn_pol.py  test_ghf_ccsd_eta.py  test_ghf_ccsd_jacobian_action.py  test_ghf_ccsd_jacobian_build.py  test_ghf_ccsd_jacobian_dd_spectrum.py  test_ghf_ccsd_jacobian_no_double_counting.py  test_ghf_ccsd_jacobian_ss_spectrum.py  test_ghf_ccsd_lr.py  test_ghf_ccsd_mu.py  test_ghf_ccsd_pol_manual.py  test_ghf_ccsd_t_response.py
tests/uhf_ccs/: prepare_uhf_ccs_lambda.py  prepare_uhf_ccs_lambda_water_sto3g.py  test_uhf_ccs_eta.py  test_uhf_ccs_jacobian_build.py  test_uhf_ccs_mu.py  test_uhf_ccs_pol_first.py
tests/uhf_ccsd/: inspect_cc_jacobian.py  prepare_uhf_ccsd.py  prepare_uhf_ccsd_lambda.py  prepare_water_ccpVDZ.py  prepare_water_sto3g.py  prepare_water_sto3g@HF.py  test_Rains_cc_jacobian_action.py  test_Stephens_cc_jacobian_action.py  test_cc_jacobian_action.py  test_cc_jacobian_diagonalization.py  test_uhf_ccsd_eta.py  test_uhf_ccsd_jacobian_build.py  test_uhf_ccsd_lr.py  test_uhf_ccsd_mu.py  test_uhf_ccsd_pol.py  test_uhf_ccsd_pol_first.py  test_uhf_ccsd_pol_manual.py  test_uhf_ccsd_pol_manual_Rain.py  test_uhf_ccsd_t_response.py
(+92 files in other folders)
