[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rspn"
version = "1.0.0"
readme = "readme.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
authors = [
    {name = "Paweł Wójcik", email = "pawel.wojcik5@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
]

[project.urls]
Repository = "https://github.com/the-pawel-wojcik/rspn"

[tool.hatch.build.targets.wheel]
packages = ["src/rspn"]
